tests/ui/did_you_mean/issue-43871-enum-instead-of-variant.stderr
error[E0532]: cannot find tuple struct or tuple variant `Option` in this scope
  --> $DIR/issue-43871-enum-instead-of-variant.rs:21:12
   |
LL |     if let Option(_) = x {
   |            ^^^^^^
   |
   = note: an enum named `Option` exists in another namespace
   = help: you might have meant to match against the enum's non-tuple variant
help: try to match against one of the enum's variants
   |
LL -     if let Option(_) = x {
LL +     if let std::option::Option::Some(_) = x {
   |

error[E0532]: cannot find tuple struct or tuple variant `Example` in this scope
  --> $DIR/issue-43871-enum-instead-of-variant.rs:27:12
   |
LL |     if let Example(_) = y {
   |            ^^^^^^^
   |
   = note: an enum named `Example` exists in another namespace
   = help: you might have meant to match against the enum's non-tuple variant
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:1:1
   |
LL | enum Example { Ex(String), NotEx }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try to match against one of the enum's variants
   |
LL |     if let Example::Ex(_) = y {
   |                   ++++

error[E0423]: cannot find function, tuple struct or tuple variant `Option` in this scope
  --> $DIR/issue-43871-enum-instead-of-variant.rs:19:13
   |
LL |     let x = Option(1);
   |             ^^^^^^
   |
   = note: an enum named `Option` exists in another namespace
   = help: you might have meant to construct the enum's non-tuple variant
help: try to construct one of the enum's variants
   |
LL -     let x = Option(1);
LL +     let x = std::option::Option::Some(1);
   |

error[E0423]: cannot find function, tuple struct or tuple variant `Void` in this scope
  --> $DIR/issue-43871-enum-instead-of-variant.rs:31:13
   |
LL |     let y = Void();
   |             ^^^^
   |
   = note: an enum named `Void` exists in another namespace
   = help: the enum has no tuple variants to construct
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:3:1
   |
LL | enum Void {}
   | ^^^^^^^^^^^^

error[E0423]: cannot find function, tuple struct or tuple variant `ManyVariants` in this scope
  --> $DIR/issue-43871-enum-instead-of-variant.rs:33:13
   |
LL |     let z = ManyVariants();
   |             ^^^^^^^^^^^^
   |
   = note: an enum named `ManyVariants` exists in another namespace
   = help: the enum has no tuple variants to construct
   = help: you might have meant to construct one of the enum's non-tuple variants
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:5:1
   |
LL | / enum ManyVariants {
LL | |     One,
LL | |     Two,
LL | |     Three,
...  |
LL | |     Ten,
LL | | }
   | |_^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0423, E0532.
For more information about an error, try `rustc --explain E0423`.
